apps/paperless-ngx/postgresql/networkpolicy.yaml
---
# Source: paperless-ngx/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgresql
  labels:
    app: postgresql
    part-of: paperless-ngx
spec:
  podSelector:
    matchLabels:
      app: postgresql
      part-of: paperless-ngx
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
